# todos

./: LICENSE  README.md
backends/express/: index.js  metadata.json  package.json
backends/flask/: app.py  metadata.json  requirements.txt
backends/gin/: go.mod  go.sum  main.go  metadata.json
backends/graphql/: index.js  metadata.json  package.json
backends/rocket/: Cargo.toml  Rocket.toml  metadata.json
backends/rocket/src/: main.rs
clients/graphql/: index.js  package.json
clients/rest/: index.d.ts  index.js
configurator/: .gitignore  index.js  package.json
databases/go/dynamodb/: go.mod  metadata.json  todos-database.go
databases/go/ephemeral/: go.mod  metadata.json  todos-database.go
databases/go/faunadb/: go.mod  metadata.json  todos-database.go
databases/go/mongodb/: go.mod  metadata.json  todos-database.go
databases/go/postgres/: go.mod  metadata.json  todos-database.go
databases/js/dynamodb/: index.js  metadata.json  package.json
databases/js/ephemeral/: index.js  metadata.json  package.json
databases/js/faunadb/: index.js  metadata.json  package.json
databases/js/mongodb/: index.js  metadata.json  package.json
databases/rust/mongodb/: Cargo.toml  metadata.json
databases/rust/mongodb/src/: lib.rs
frontends/angular/: .gitignore  angular.json  metadata.json  package.json
frontends/react/: .gitignore  package.json
frontends/svelte/: .gitignore  metadata.json  package.json
frontends/vanilla/: index.html  index.js  package.json
frontends/vue/: index.html  package.json
themes/none/: package.json
(+44 files in other folders)
