[package]
name = "todos_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
todos_database = { path = "../../databases/rust/postgres" }
rocket_contrib = { version = "0.4.10", features = ["json"] }
rocket_cors = "0.5.2"
